test/arrays/intents/out/out-domain-no-elt.good
out-domain-no-elt.chpl:1: In function 'f':
out-domain-no-elt.chpl:1: error: 'out' formals currently require an array element type
